src/objects/TRAK_User_Story__c.object
<CustomObject>
    <description>Business Description: This object is used to record User Stories with their acceptance criteria. These are linked to a sprint during sprint planning and delivered throughout the sprint process.

Used In: Release Tracker App</description>
    <fields>
        <fullName>Acceptance_Criteria__c</fullName>
        <description>The Acceptance Criteria for this user story
Created on 01/07/2014 by SMills 
TRAK</description>
        <inlineHelpText>Acceptance Criteria are the specific, testable and complete needs of this user story. They may follow a structure such as &quot;Given When Then&quot; or list out specific attributes and fields as needed. The Acceptance Criteria are used by developers and testers</inlineHelpText>
        <label>Acceptance Criteria</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Allocated_Sprint__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The sprint this story has been allocated to. Used for sprint planning and in the burndown
Created on 04/07/2014 by SMills 
TRAK</description>
        <inlineHelpText>The sprint that this story has been committed to</inlineHelpText>
        <label>Allocated Sprint</label>
        <referenceTo>TRAK_Sprint__c</referenceTo>
        <relationshipLabel>Allocated User Stories</relationshipLabel>
        <relationshipName>TRAK_Allocated_User_Stories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <description>This field is used to capture the status of the approval process in User stories: Created on 06/11/2014 by Preeti Grover:TRAK</description>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>As_A_text__c</fullName>
        <description>The type of user(s) this story provides functionality for
Created on 01/07/2014 by SMills 
TRAK</description>
        <inlineHelpText>The type of user(s) this story is about. Please ensure consistency with your app user groups</inlineHelpText>
        <label>As A...</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BQ_Approval_Status__c</fullName>
        <formula>IF( TRAK_Business_Quality_Approved__c = TRUE, &quot;Approved&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BQ Approval Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSQ_Approval_Status__c</fullName>
        <formula>IF( TRAK_Computer_Systems_Quality_Approved__c = TRUE, &quot;Approved&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CSQ Approval Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cancellation_Reason__c</fullName>
        <description>The reason a user story has been cancelled
Created on 01/07/2014 by SMills 
TRAK</description>
        <inlineHelpText>The reason this User Story is no longer being considered as valid. This should only be used if the User Story Status has been set to Cancelled</inlineHelpText>
        <label>Cancellation Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Cirrus_Release__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The release this story will be put in to</inlineHelpText>
        <label>Release</label>
        <referenceTo>TRAK_Release__c</referenceTo>
        <relationshipLabel>User Stories</relationshipLabel>
        <relationshipName>TRAK_Cirrus_User_Stories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <description>Date the user story was Done. Driven by workflow from the status field. Used in reporting
Created on 01/07/2014 by SMills 
TRAK</description>
        <inlineHelpText>The date a User Story was completed. This is populated automatically when the USer Story Status is set to Passed (Complete)</inlineHelpText>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Compliance_Approve_Date__c</fullName>
        <inlineHelpText>Date this has been reviewed and approved by Compliance</inlineHelpText>
        <label>Compliance Approved Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Compliance_Criteria__c</fullName>
        <description>Compliance / Quality Notes
Created on 01/07/2014 by SMills 
TRAK</description>
        <inlineHelpText>Legal, regulatory or compliance related requirements and observations</inlineHelpText>
        <label>Compliance Criteria</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Compliance_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Business Quality user responsible for this User Story
Created on 01/07/2014 by SMills 
TRAK</description>
        <inlineHelpText>The Business Quality user responsible for this User Story</inlineHelpText>
        <label>Business Quality</label>
        <referenceTo>User</referenceTo>
        <relationshipName>TRAK_User_Stories1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Computer_Systems_Quality__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Computer Systems Quality User responsible for this User Story
Created on 01/07/2014 by SMills 
TRAK</description>
        <inlineHelpText>The Computer Systems Quality User responsible for this User Story</inlineHelpText>
        <label>Computer Systems Quality</label>
        <referenceTo>User</referenceTo>
        <relationshipName>TRAK_User_Stories5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Critical__c</fullName>
        <description>This field is used to capture the criticality information: Created on 06/11/2014 by Preeti Grover:TRAK</description>
        <inlineHelpText>Is this User Story considered Quality Critical</inlineHelpText>
        <label>Quality Critical</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Not Assessed</fullName>
                    <default>true</default>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Data_Steps__c</fullName>
        <label>Data Steps</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Demo_Provided_Date__c</fullName>
        <description>This field tracks the date when the demo was provided.</description>
        <inlineHelpText>The date in which the development team provided a demo of the user story to the product owner or delegate.</inlineHelpText>
        <label>Demo Provided Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Developer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Computer Systems Quality User responsible for this User Story
Created on 01/07/2014 by SMills 
TRAK</description>
        <inlineHelpText>The primary Developer responsible for developing this User Story</inlineHelpText>
        <label>Developer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>TRAK_User_Stories6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Development_Stage__c</fullName>
        <description>User story status. This drives burndown, kanban and reporting
Created on 01/07/2014 by SMills 
TRAK</description>
        <inlineHelpText>The stage this User Story is at in the Sprint lifecycle. User Stories are &quot;burned&quot; in the Sprint Dashboard when they are set to &quot;Passed (Complete)&quot;</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cancelled</fullName>
                    <color>#663333</color>
                </value>
                <value>
                    <fullName>Raised</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Backlog</fullName>
                    <color>#999999</color>
                </value>
                <value>
                    <fullName>Story Definition</fullName>
                    <color>#FF6666</color>
                </value>
                <value>
                    <fullName>Ready for Development</fullName>
                    <color>#FFCC66</color>
                </value>
                <value>
                    <fullName>In Development</fullName>
                    <color>#FFCC33</color>
                </value>
                <value>
                    <fullName>Ready for Test Release</fullName>
                    <color>#66FF99</color>
                </value>
                <value>
                    <fullName>In Test</fullName>
                    <color>#33CC00</color>
                </value>
                <value>
                    <fullName>Passed Test</fullName>
                </value>
                <value>
                    <fullName>Ready for Test PreProd</fullName>
                </value>
                <value>
                    <fullName>Passed Test PreProd</fullName>
                </value>
                <value>
                    <fullName>Ready for Release</fullName>
                </value>
                <value>
                    <fullName>Production - Released</fullName>
                    <color>#006600</color>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>External_Reference__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>An external reference that can be used to identify this User Story in another system</inlineHelpText>
        <label>External Reference</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_User_Story__c</fullName>
        <description>Combines the three fields As A. I Want To. So That
Created on 01/07/2014 by SMills 
TRAK</description>
        <formula>&quot;As a &quot; &amp;  As_A_text__c  &amp;&quot; I want to &quot; &amp;  I_Want_To__c &amp; &quot; so that &quot; &amp; So_that__c</formula>
        <inlineHelpText>The Complete User Story in the format &quot;As a... I want to... So That...&quot;</inlineHelpText>
        <label>Full User Story</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Functional_Area__c</fullName>
        <label>Functional Area</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Customer Services</fullName>
                    <color>#0B6FCE</color>
                </value>
                <value>
                    <fullName>Event</fullName>
                    <color>#78C953</color>
                </value>
                <value>
                    <fullName>Market Access</fullName>
                    <color>#E27001</color>
                </value>
                <value>
                    <fullName>Marketing / Multichannel</fullName>
                    <color>#A845DC</color>
                </value>
                <value>
                    <fullName>SFA</fullName>
                    <color>#F3D904</color>
                </value>
                <value>
                    <fullName>Analytics / Insights</fullName>
                    <color>#A53711</color>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GXP__c</fullName>
        <description>This field is used to capture GXP related information: Created on 06/11/2014 by Preeti Grover: TRAK</description>
        <inlineHelpText>Is this User Story considered subject to GxP</inlineHelpText>
        <label>GxP</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Not Assessed</fullName>
                    <default>true</default>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Has_Data_Steps__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Data Steps</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Post_Manual_Steps__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Post Manual Steps</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Pre_Manual_Steps__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Ticked by workflow if a story has pre deployment manual steps. Used by docusign.</description>
        <label>Has Pre Manual Steps</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Validation_Steps__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Validation Steps</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>I_Want_To__c</fullName>
        <description>&quot;I want to&quot; part of the user story
Created on 01/07/2014 by SMills 
TRAK</description>
        <inlineHelpText>What the user needs to achieve. 

E.g. 
I want To...Be able to search for customers on different fields (e.g. First Name, Surname, Address, and Product Metrics) in my territory</inlineHelpText>
        <label>I want to...</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Legal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Captures if the User Story has legal implications.
Created on 01/07/2014 by SMills 
TRAK</description>
        <inlineHelpText>Does this User Story have any legal implications? If checked, please ensure these are detailed in the Compliance Criteria field.</inlineHelpText>
        <label>Legal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Link__c</fullName>
        <formula>Left($Api.Enterprise_Server_URL_190,(find(&apos;/services&apos;,$Api.Enterprise_Server_URL_190))) + Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Master_Priority__c</fullName>
        <formula>if(value(text(Priority__c))&gt;0, value(text(Priority__c)), 99 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Master Priority</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Non_Functional_Requirement__c</fullName>
        <description>Non Functionals
Created on 01/07/2014 by SMills 
TRAK</description>
        <inlineHelpText>The non-functional qualities the solution needs to exhibit. Examples include
Scalability (number of records processed) 
Responsiveness (must respond in x seconds)</inlineHelpText>
        <label>Non Functional Requirement</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Parent_Epic__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the epic 
Created on 01/07/2014 by SMills 
TRAK</description>
        <inlineHelpText>The high level functionality that this user story could be grouped under</inlineHelpText>
        <label>Parent Epic</label>
        <referenceTo>TRAK_Epic__c</referenceTo>
        <relationshipLabel>User Stories</relationshipLabel>
        <relationshipName>TRAK_User_Stories7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pending_My_Business_Quality_Review__c</fullName>
        <description>TRUE is a user story has either QC or GxP Fields in Unassessed and the current user is the BQ assigned.</description>
        <formula>AND(Compliance_Owner__c =  $User.Id, OR(ISPICKVAL(Critical__c,&quot;Not Assessed&quot;), ISPICKVAL(GXP__c,&quot;Not Assessed&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pending My Business Quality Review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Planned_Release__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Internal project release, prior to joining the Cirrus process
Created on 01/07/2014 by SMills 
TRAK</description>
        <inlineHelpText>The internal project release for this user story</inlineHelpText>
        <label>Project Release</label>
        <referenceTo>TRAK_Release__c</referenceTo>
        <relationshipLabel>User Stories</relationshipLabel>
        <relationshipName>TRAK_User_Stories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Post_Deployment_Manual_steps__c</fullName>
        <description>Free text field to enter the Post deployment manual steps.</description>
        <inlineHelpText>Post-deployment steps that aren&apos;t captured by part of the automated metadata deployment process. Please ensure these are clear, concise, and complete. Put N/A if none exist.</inlineHelpText>
        <label>Post-Deployment Manual steps</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <description>The priority of this user story, this is used in sprint planning
Created on 01/07/2014 by SMills 
TRAK</description>
        <inlineHelpText>The relative priority of this User Story. 1 is the most important, 99 is the least. This can be used during Sprint Planning</inlineHelpText>
        <label>Priority</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Privacy__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Does this User Story have privacy implications
Created on 01/07/2014 by SMills 
TRAK</description>
        <inlineHelpText>Flag this when the user story concerns personal identifiable information linked to your process</inlineHelpText>
        <label>Privacy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Proposed_Sprint__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Proposed Sprint. Used in Sprint Planning
Created on 01/07/2014 by SMills 
TRAK</description>
        <inlineHelpText>Following Release Planning this User Story can be proposed for a particular sprint. Stories can the be taken in or rejected from this sprint during the Sprint Planning process, as determined by the Product Owner</inlineHelpText>
        <label>Proposed Sprint</label>
        <referenceTo>TRAK_Sprint__c</referenceTo>
        <relationshipLabel>Proposed User Stories</relationshipLabel>
        <relationshipName>TRAK_Proposed_User_Stories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QRCode__c</fullName>
        <formula>IMAGE(&apos;https://chart.googleapis.com/chart?chf=bg,s,ffffff&amp;cht=qr&amp;chs=220x220&amp;chl=http://tracker.force.com/QRScan/?id=&apos;&amp; Id&amp;&apos;&amp;chld=|0&apos; , &apos;Scan the QR code to see User Story in your mobile&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>QRCode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Release_Completeness_Indicator__c</fullName>
        <description>Icon to show release completeness
Created on 01/07/2014 by SMills 
TRAK</description>
        <formula>IF ( Release_Completeness__c , IMAGE(&quot;/img/msg_icons/confirm16.png&quot;,&quot;Complete&quot;), IMAGE(&quot;/img/msg_icons/error16.png&quot;, &quot;Not Complete&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The manual release steps and the validation steps must be completed. If there are none, these must be specifically declared as &quot;N/A&quot;</inlineHelpText>
        <label>Release Completeness</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Release_Completeness__c</fullName>
        <defaultValue>false</defaultValue>
        <description>System field to show release completeness, populated by workflow
Created on 01/07/2014 by SMills 
TRAK</description>
        <label>Release Completeness</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Release_Impact_Analysis__c</fullName>
        <description>How does this story impact the release: Created by SMatharu on 09/07/2014</description>
        <inlineHelpText>How does this story impact the release?
For example, &quot;because this story modifies overnight batch jobs, if the overnight batches fail, it would require a data fix to be a applied post-release&quot;</inlineHelpText>
        <label>Release Impact Analysis</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Release_Impact__c</fullName>
        <description>The impact on the release. Based on the kind of change going through as part of the release: Created by SMatharu on 09/07/2014</description>
        <inlineHelpText>High -  Any batch change, any trigger/validation rule on a &apos;batched&apos; object, any high profile VF Page

Medium -  class/trigger/complex VF page

Low - other</inlineHelpText>
        <label>Release Impact</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Release_Note__c</fullName>
        <description>The release note to be issued to the business regarding this story: Created on 09/07/2014 by SMatharu</description>
        <inlineHelpText>The release note to be issued to the business regarding this story</inlineHelpText>
        <label>Business Release Note</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Release_Steps_Automated__c</fullName>
        <inlineHelpText>Elements which have to be deployed in an automated way (Eclipse).
Please put N/A when not applicable</inlineHelpText>
        <label>Release Steps (Automated)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Release_Steps_Manual__c</fullName>
        <description>List of manual steps needed to deploy this user story.
Created on 01/07/2014 by SMills 
TRAK</description>
        <inlineHelpText>Deployment steps that aren&apos;t captured by part of the automated metadata deployment process. Please ensure these are clear, concise, complete and specify whether they are pre or post deployment steps.

Put N/A if none are needed</inlineHelpText>
        <label>Pre-Deployment Manual steps</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SC_Approval_Status__c</fullName>
        <formula>IF( TRAK_System_Custodian_Approved__c = TRUE, &quot;Approved&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SC Approval Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SO_Approval_Status__c</fullName>
        <formula>IF( TRAK_System_Owner_Approved__c = TRUE, &quot;Approved&quot; , &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SO Approval Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Security__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Captures if the User Story has security implications.
Created on 01/07/2014 by SMills 
TRAK</description>
        <inlineHelpText>Does this User Story have any security implications? If checked, please ensure these are detailed in the Compliance Criteria field.</inlineHelpText>
        <label>Security</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>So_that__c</fullName>
        <description>Business Value of this User Story
Created on 01/07/2014 by SMills 
TRAK</description>
        <inlineHelpText>Please enter the business value of this User Story. This helps Developers and Business Analysts understand the important essence of what the user needs to ultimately achieve.

I can easily find my  relevant target customer information</inlineHelpText>
        <label>So that...</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sprint_Tester__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Tester responsible for this User Story
Created on 04/07/2014 by SMills 
TRAK</description>
        <inlineHelpText>The Tester responsible for testing this User Story during the sprint</inlineHelpText>
        <label>Sprint Tester</label>
        <referenceTo>User</referenceTo>
        <relationshipName>TRAK_User_Stories_Tester</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Story_Points_Other__c</fullName>
        <description>Story points for non SFDC dev
Created on 01/07/2014 by SMills 
TRAK</description>
        <inlineHelpText>The level of complexity as estimated in Story Points NOT related to force.com development. For example, related to Integration effort</inlineHelpText>
        <label>Story Points (Other)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Story_Points_Total__c</fullName>
        <description>Total Story Points for this story. Sums SFDC and Other Story point fields
Created on 01/07/2014 by SMills 
TRAK</description>
        <formula>nullvalue(value(text( Story_Points__c )), 0)  + nullvalue(value(text(  Story_Points_Other__c)),0)</formula>
        <inlineHelpText>The total level of complexity as estimated in Story Points related to delivering this User Story. Includes both SFDC Story Points and Other Story Points</inlineHelpText>
        <label>Story Points Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Story_Points__c</fullName>
        <description>Story points for SFDC dev
Created on 01/07/2014 by SMills 
TRAK</description>
        <inlineHelpText>The level of complexity as estimated in Story Points related to force.com development</inlineHelpText>
        <label>Story Points SFDC</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Process__c</fullName>
        <label>Sub-Process</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Functional_Area__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Account Planning</fullName>
                </value>
                <value>
                    <fullName>Account Profile</fullName>
                </value>
                <value>
                    <fullName>Analytics &amp; Reporting</fullName>
                </value>
                <value>
                    <fullName>Call Management</fullName>
                </value>
                <value>
                    <fullName>Campaign Design and Creation</fullName>
                </value>
                <value>
                    <fullName>Campaign Execution</fullName>
                </value>
                <value>
                    <fullName>Campaign Monitoring</fullName>
                </value>
                <value>
                    <fullName>Collaboration</fullName>
                </value>
                <value>
                    <fullName>Customer Feedback</fullName>
                </value>
                <value>
                    <fullName>Data Feeds</fullName>
                </value>
                <value>
                    <fullName>Data Quality</fullName>
                </value>
                <value>
                    <fullName>Event Execution and Follow up</fullName>
                </value>
                <value>
                    <fullName>Event Planning  and Approval</fullName>
                </value>
                <value>
                    <fullName>Insights</fullName>
                </value>
                <value>
                    <fullName>Marketing Plan</fullName>
                </value>
                <value>
                    <fullName>Medical</fullName>
                </value>
                <value>
                    <fullName>Mobile/Apps</fullName>
                </value>
                <value>
                    <fullName>Sample Management</fullName>
                </value>
                <value>
                    <fullName>Segmentation &amp; Cycle Planning</fullName>
                </value>
                <value>
                    <fullName>Sharing Information</fullName>
                </value>
                <value>
                    <fullName>Territory Management</fullName>
                </value>
                <value>
                    <fullName>Time Registration</fullName>
                </value>
                <value>
                    <fullName>Web Call</fullName>
                </value>
                <value>
                    <fullName>Websites / Portal</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Webcall</fullName>
                </value>
                <value>
                    <fullName>Edetail</fullName>
                </value>
                <value>
                    <fullName>Customer Journey</fullName>
                </value>
                <value>
                    <fullName>Message</fullName>
                </value>
                <value>
                    <fullName>Webinars</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Submit_for_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Submit for Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Submitter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Submitter</label>
        <referenceTo>User</referenceTo>
        <relationshipName>TRAK_User_Stories2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Supporting_BA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Business Analyst responsible for defining the acceptance criteria
Created on 01/07/2014 by SMills 
TRAK</description>
        <inlineHelpText>The Business Analyst responsible for helping define and refine Acceptance Criteria in this User Story</inlineHelpText>
        <label>Business Analyst</label>
        <referenceTo>User</referenceTo>
        <relationshipName>TRAK_User_Stories3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>System_Custodian__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field will store the System Custodian information for the app: 
Created on 06/11/2014 by Preeti Grover: TRAK</description>
        <inlineHelpText>The System Custodian for the application this User Story is related to. If not set when initially saving the User Story, it should be populated automatically based on the value on the associated App record</inlineHelpText>
        <label>System Custodian</label>
        <referenceTo>User</referenceTo>
        <relationshipName>TRAK_User_Stories4</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>